--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.name=FoodFrenzy
-spring.datasource.url=jdbc:mysql://localhost:3306/FoodFrenzy
+server.port=${PORT:8080}
+
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
 spring.datasource.username=root
 spring.datasource.password=Prasad@1029
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
